k8s/namespace-v1-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: v1-1
  labels:
    name: v1-1
    version: "1.1"
    environment: production
