k8s/namespace-v1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: v1
  labels:
    name: v1
    version: "1.0"
    environment: production
