k8s/namespace-v2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: v2
  labels:
    name: v2
    version: "2.0"
    environment: production
