k8s/service-v1-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalogue-v1-1-service
  namespace: v1-1
  labels:
    app: product-catalogue
    version: "1.1"
spec:
  selector:
    app: product-catalogue
    version: "1.1"
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8082
  type: ClusterIP
