k8s/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalogue-v1-service
  namespace: v1
  labels:
    app: product-catalogue
    version: "1.0"
spec:
  selector:
    app: product-catalogue
    version: "1.0"
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8082
  type: ClusterIP
