k8s/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalogue-v2-service
  namespace: v2
  labels:
    app: product-catalogue
    version: "2.0"
spec:
  selector:
    app: product-catalogue
    version: "2.0"
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
